exports[`no-unawaited-promise-assertion > invalid(1): import test from \"node:test\";\ntest(\"a\", async ({assert}) => {\n\tload().then(v => { assert.strictEqual(v, 42); });\n}); 1`] = `

  1 | import test from "node:test";
  2 | test("a", async ({assert}) => {
  3 | 	load().then(v => { assert.strictEqual(v, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(1): import test from \"node:test\";\ntest(\"a\", async ({assert}) => {\n\tload().then(v => { assert.strictEqual(v, 42); });\n}); 2`] = `

Message:
  1 | import test from "node:test";
  2 | test("a", async ({assert}) => {
> 3 | 	load().then(v => { assert.strictEqual(v, 42); });
    | 	                   ^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  4 | });

Output:
  1 | import test from "node:test";
  2 | test("a", async ({assert}) => {
  3 | 	await load().then(v => { assert.strictEqual(v, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(10): import * as nodeTest from 'node:test';\nimport assert from 'node:assert';\nnodeTest.test('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | import assert from 'node:assert';
  3 | nodeTest.test('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(10): import * as nodeTest from 'node:test';\nimport assert from 'node:assert';\nnodeTest.test('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | import assert from 'node:assert';
  3 | nodeTest.test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import * as nodeTest from 'node:test';
  2 | import assert from 'node:assert';
  3 | nodeTest.test('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(11): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => assert.strictEqual(value, 42));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => assert.strictEqual(value, 42));
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(11): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => assert.strictEqual(value, 42));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => assert.strictEqual(value, 42));
    | 	                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => assert.strictEqual(value, 42));
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(12): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert(value); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert(value); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(12): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert(value); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert(value); });
    | 	                       ^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert(value); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(13): import {it} from 'node:test';\nimport assert from 'node:assert';\nit('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import {it} from 'node:test';
  2 | import assert from 'node:assert';
  3 | it('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(13): import {it} from 'node:test';\nimport assert from 'node:assert';\nit('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import {it} from 'node:test';
  2 | import assert from 'node:assert';
  3 | it('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import {it} from 'node:test';
  2 | import assert from 'node:assert';
  3 | it('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(14): import test from 'node:test';\nimport assert from 'node:assert/strict';\ntest('loads', async () => {\n\tload().then(value => { assert.equal(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert/strict';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.equal(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(14): import test from 'node:test';\nimport assert from 'node:assert/strict';\ntest('loads', async () => {\n\tload().then(value => { assert.equal(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert/strict';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.equal(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert/strict';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert.equal(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(15): import test from 'node:test';\nimport {strictEqual} from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {strictEqual} from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(15): import test from 'node:test';\nimport {strictEqual} from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {strictEqual} from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import {strictEqual} from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(16): import test from 'node:test';\nimport {strictEqual as equal} from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { equal(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {strictEqual as equal} from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { equal(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(16): import test from 'node:test';\nimport {strictEqual as equal} from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { equal(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {strictEqual as equal} from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { equal(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import {strictEqual as equal} from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { equal(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(17): import test from 'node:test';\ntest('loads', async t => {\n\tload().then(value => { t.assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('loads', async t => {
  3 | 	load().then(value => { t.assert.strictEqual(value, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(17): import test from 'node:test';\ntest('loads', async t => {\n\tload().then(value => { t.assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('loads', async t => {
> 3 | 	load().then(value => { t.assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  4 | });

Output:
  1 | import test from 'node:test';
  2 | test('loads', async t => {
  3 | 	await load().then(value => { t.assert.strictEqual(value, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(18): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(undefined, error => { assert.ifError(error); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(undefined, error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(18): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(undefined, error => { assert.ifError(error); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(undefined, error => { assert.ifError(error); });
    | 	                                  ^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(undefined, error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(19): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().catch(error => { assert.ifError(error); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().catch(error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(19): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().catch(error => { assert.ifError(error); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().catch(error => { assert.ifError(error); });
    | 	                        ^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`catch()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().catch(error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(2): import test from \"node:test\";\ntest(\"a\", async ({assert: {strictEqual}}) => {\n\tload().then(v => { strictEqual(v, 42); });\n}); 1`] = `

  1 | import test from "node:test";
  2 | test("a", async ({assert: {strictEqual}}) => {
  3 | 	load().then(v => { strictEqual(v, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(2): import test from \"node:test\";\ntest(\"a\", async ({assert: {strictEqual}}) => {\n\tload().then(v => { strictEqual(v, 42); });\n}); 2`] = `

Message:
  1 | import test from "node:test";
  2 | test("a", async ({assert: {strictEqual}}) => {
> 3 | 	load().then(v => { strictEqual(v, 42); });
    | 	                   ^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  4 | });

Output:
  1 | import test from "node:test";
  2 | test("a", async ({assert: {strictEqual}}) => {
  3 | 	await load().then(v => { strictEqual(v, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(20): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().finally(() => { assert.ok(cleanedUp); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().finally(() => { assert.ok(cleanedUp); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(20): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().finally(() => { assert.ok(cleanedUp); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().finally(() => { assert.ok(cleanedUp); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`finally()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().finally(() => { assert.ok(cleanedUp); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(21): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(21): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(21): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });\n}); 3`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });
    | 	                                                                          ^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`catch()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(22): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.ok(value); assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.ok(value); assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(22): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.ok(value); assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.ok(value); assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert.ok(value); assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(23): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tpromise?.then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	promise?.then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(23): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tpromise?.then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	promise?.then(value => { assert.strictEqual(value, 42); });
    | 	                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await promise?.then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(24): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload?.().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load?.().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(24): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload?.().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load?.().then(value => { assert.strictEqual(value, 42); });
    | 	                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load?.().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(25): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tvoid load().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	void load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(25): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tvoid load().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	void load().then(value => { assert.strictEqual(value, 42); });
    | 	                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(26): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(26): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(27): import {before} from 'node:test';\nimport assert from 'node:assert';\nbefore(async () => {\n\tsetup().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import {before} from 'node:test';
  2 | import assert from 'node:assert';
  3 | before(async () => {
  4 | 	setup().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(27): import {before} from 'node:test';\nimport assert from 'node:assert';\nbefore(async () => {\n\tsetup().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import {before} from 'node:test';
  2 | import assert from 'node:assert';
  3 | before(async () => {
> 4 | 	setup().then(value => { assert.strictEqual(value, 42); });
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import {before} from 'node:test';
  2 | import assert from 'node:assert';
  3 | before(async () => {
  4 | 	await setup().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(28): import {beforeEach} from 'node:test';\nbeforeEach(async t => {\n\tsetup().then(value => { t.assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async t => {
  3 | 	setup().then(value => { t.assert.strictEqual(value, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(28): import {beforeEach} from 'node:test';\nbeforeEach(async t => {\n\tsetup().then(value => { t.assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async t => {
> 3 | 	setup().then(value => { t.assert.strictEqual(value, 42); });
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  4 | });

Output:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async t => {
  3 | 	await setup().then(value => { t.assert.strictEqual(value, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(29): import {afterEach} from 'node:test';\nimport assert from 'node:assert';\nafterEach(async () => {\n\tteardown().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import {afterEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | afterEach(async () => {
  4 | 	teardown().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(29): import {afterEach} from 'node:test';\nimport assert from 'node:assert';\nafterEach(async () => {\n\tteardown().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import {afterEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | afterEach(async () => {
> 4 | 	teardown().then(value => { assert.strictEqual(value, 42); });
    | 	                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import {afterEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | afterEach(async () => {
  4 | 	await teardown().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([load().then(value => { assert.strictEqual(value, 42); })]);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	Promise.all([load().then(value => { assert.strictEqual(value, 42); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([load().then(value => { assert.strictEqual(value, 42); })]);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise.all([load().then(value => { assert.strictEqual(value, 42); })]);
    | 	                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await Promise.all([load().then(value => { assert.strictEqual(value, 42); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(30): import test from 'node:test';\nimport assert from 'node:assert';\ntest('parent', async t => {\n\tawait t.test('child', async () => {\n\t\tload().then(value => { assert.strictEqual(value, 42); });\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', async t => {
  4 | 	await t.test('child', async () => {
  5 | 		load().then(value => { assert.strictEqual(value, 42); });
  6 | 	});
  7 | });

`;

exports[`no-unawaited-promise-assertion > invalid(30): import test from 'node:test';\nimport assert from 'node:assert';\ntest('parent', async t => {\n\tawait t.test('child', async () => {\n\t\tload().then(value => { assert.strictEqual(value, 42); });\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', async t => {
  4 | 	await t.test('child', async () => {
> 5 | 		load().then(value => { assert.strictEqual(value, 42); });
    | 		                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  6 | 	});
  7 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', async t => {
  4 | 	await t.test('child', async () => {
  5 | 		await load().then(value => { assert.strictEqual(value, 42); });
  6 | 	});
  7 | });

`;

exports[`no-unawaited-promise-assertion > invalid(31): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tclass Fixture {\n\t\tstatic {\n\t\t\tload().then(value => { assert.strictEqual(value, 42); });\n\t\t}\n\t}\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	class Fixture {
  5 | 		static {
  6 | 			load().then(value => { assert.strictEqual(value, 42); });
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-unawaited-promise-assertion > invalid(31): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tclass Fixture {\n\t\tstatic {\n\t\t\tload().then(value => { assert.strictEqual(value, 42); });\n\t\t}\n\t}\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	class Fixture {
  5 | 		static {
> 6 | 			load().then(value => { assert.strictEqual(value, 42); });
    | 			                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-unawaited-promise-assertion > invalid(32): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(32): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(33): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(33): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(34): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); })!);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then((value => { assert.strictEqual(value, 42); })!);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(34): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); })!);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then((value => { assert.strictEqual(value, 42); })!);
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then((value => { assert.strictEqual(value, 42); })!);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(35): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(condition ? load().then(value => { assert.strictEqual(value, 42); }) : undefined) as Promise<void>;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	(condition ? load().then(value => { assert.strictEqual(value, 42); }) : undefined) as Promise<void>;
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(35): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(condition ? load().then(value => { assert.strictEqual(value, 42); }) : undefined) as Promise<void>;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	(condition ? load().then(value => { assert.strictEqual(value, 42); }) : undefined) as Promise<void>;
    | 	                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(36): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(load().then(value => { assert.strictEqual(value, 42); }) as Promise<void>);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	(load().then(value => { assert.strictEqual(value, 42); }) as Promise<void>);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(36): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(load().then(value => { assert.strictEqual(value, 42); }) as Promise<void>);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	(load().then(value => { assert.strictEqual(value, 42); }) as Promise<void>);
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(37): import test from 'node:test';\nimport assert from 'node:assert';\n(test as typeof test)('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | (test as typeof test)('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(37): import test from 'node:test';\nimport assert from 'node:assert';\n(test as typeof test)('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | (test as typeof test)('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | (test as typeof test)('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(38): import {test, getTestContext} from 'node:test';\ntest('loads', async () => {\n\tload().then(value => { getTestContext().assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('loads', async () => {
  3 | 	load().then(value => { getTestContext().assert.strictEqual(value, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(38): import {test, getTestContext} from 'node:test';\ntest('loads', async () => {\n\tload().then(value => { getTestContext().assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('loads', async () => {
> 3 | 	load().then(value => { getTestContext().assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  4 | });

Output:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('loads', async () => {
  3 | 	await load().then(value => { getTestContext().assert.strictEqual(value, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(39): import {test, getTestContext} from 'node:test';\ntest('loads', async () => {\n\tload().then(() => { getTestContext().assert.rejects(load()); });\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('loads', async () => {
  3 | 	load().then(() => { getTestContext().assert.rejects(load()); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(39): import {test, getTestContext} from 'node:test';\ntest('loads', async () => {\n\tload().then(() => { getTestContext().assert.rejects(load()); });\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('loads', async () => {
> 3 | 	load().then(() => { getTestContext().assert.rejects(load()); });
    | 	                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  4 | });

Output:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('loads', async () => {
  3 | 	await load().then(() => { getTestContext().assert.rejects(load()); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(4): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.allSettled([load().then(value => { assert.strictEqual(value, 42); })]);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	Promise.allSettled([load().then(value => { assert.strictEqual(value, 42); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(4): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.allSettled([load().then(value => { assert.strictEqual(value, 42); })]);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise.allSettled([load().then(value => { assert.strictEqual(value, 42); })]);
    | 	                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await Promise.allSettled([load().then(value => { assert.strictEqual(value, 42); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(40): import {test, getTestContext} from 'node:test';\nimport assert from 'node:assert';\ntest('o', async () => {\n\tawait getTestContext().test('s', () => { load().then(v => { assert.equal(v, 1); }); });\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('o', async () => {
  4 | 	await getTestContext().test('s', () => { load().then(v => { assert.equal(v, 1); }); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(40): import {test, getTestContext} from 'node:test';\nimport assert from 'node:assert';\ntest('o', async () => {\n\tawait getTestContext().test('s', () => { load().then(v => { assert.equal(v, 1); }); });\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('o', async () => {
> 4 | 	await getTestContext().test('s', () => { load().then(v => { assert.equal(v, 1); }); });
    | 	                                                            ^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(41): // A \`getTestContext()\` hook is the same hook, so its callback is the same boundary\nimport {test, getTestContext} from 'node:test';\nimport assert from 'node:assert';\ntest('a', t => {\n\tgetTestContext().beforeEach(() => {\n\t\tfoo().then(() => { assert.ok(x); });\n\t});\n}); 1`] = `

  1 | // A \`getTestContext()\` hook is the same hook, so its callback is the same boundary
  2 | import {test, getTestContext} from 'node:test';
  3 | import assert from 'node:assert';
  4 | test('a', t => {
  5 | 	getTestContext().beforeEach(() => {
  6 | 		foo().then(() => { assert.ok(x); });
  7 | 	});
  8 | });

`;

exports[`no-unawaited-promise-assertion > invalid(41): // A \`getTestContext()\` hook is the same hook, so its callback is the same boundary\nimport {test, getTestContext} from 'node:test';\nimport assert from 'node:assert';\ntest('a', t => {\n\tgetTestContext().beforeEach(() => {\n\t\tfoo().then(() => { assert.ok(x); });\n\t});\n}); 2`] = `

Message:
  1 | // A \`getTestContext()\` hook is the same hook, so its callback is the same boundary
  2 | import {test, getTestContext} from 'node:test';
  3 | import assert from 'node:assert';
  4 | test('a', t => {
  5 | 	getTestContext().beforeEach(() => {
> 6 | 		foo().then(() => { assert.ok(x); });
    | 		                   ^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  7 | 	});
  8 | });

`;

exports[`no-unawaited-promise-assertion > invalid(42): import test from 'node:test';\nimport assert from 'node:assert';\ntest('a', async t => {\n\tt.plan(1, {wait: false});\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('a', async t => {
  4 | 	t.plan(1, {wait: false});
  5 | 	load().then(value => { assert.strictEqual(value, 42); });
  6 | });

`;

exports[`no-unawaited-promise-assertion > invalid(42): import test from 'node:test';\nimport assert from 'node:assert';\ntest('a', async t => {\n\tt.plan(1, {wait: false});\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('a', async t => {
  4 | 	t.plan(1, {wait: false});
> 5 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  6 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('a', async t => {
  4 | 	t.plan(1, {wait: false});
  5 | 	await load().then(value => { assert.strictEqual(value, 42); });
  6 | });

`;

exports[`no-unawaited-promise-assertion > invalid(43): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tflag || load().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	flag || load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(43): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tflag || load().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	flag || load().then(value => { assert.strictEqual(value, 42); });
    | 	                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	flag || await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(44): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }) && flag;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); }) && flag;
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(44): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }) && flag;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); }) && flag;
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(45): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\ttry { load().then(value => { assert.strictEqual(value, 42); }); } catch (error) { report(error); }\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	try { load().then(value => { assert.strictEqual(value, 42); }); } catch (error) { report(error); }
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(45): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\ttry { load().then(value => { assert.strictEqual(value, 42); }); } catch (error) { report(error); }\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	try { load().then(value => { assert.strictEqual(value, 42); }); } catch (error) { report(error); }
    | 	                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	try { await load().then(value => { assert.strictEqual(value, 42); }); } catch (error) { report(error); }
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(46): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { try { assert.strictEqual(value, 42); } finally { cleanup(); } });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { try { assert.strictEqual(value, 42); } finally { cleanup(); } });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(46): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { try { assert.strictEqual(value, 42); } finally { cleanup(); } });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { try { assert.strictEqual(value, 42); } finally { cleanup(); } });
    | 	                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { try { assert.strictEqual(value, 42); } finally { cleanup(); } });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(47): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(() => { try { assert.rejects(load()); } catch (error) { report(error); } });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(() => { try { assert.rejects(load()); } catch (error) { report(error); } });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(47): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(() => { try { assert.rejects(load()); } catch (error) { report(error); } });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(() => { try { assert.rejects(load()); } catch (error) { report(error); } });
    | 	                          ^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(() => { try { assert.rejects(load()); } catch (error) { report(error); } });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(48): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(async () => { await assert.rejects(load()); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(async () => { await assert.rejects(load()); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(48): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(async () => { await assert.rejects(load()); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(async () => { await assert.rejects(load()); });
    | 	                                ^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(async () => { await assert.rejects(load()); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(49): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(() => { assert.doesNotReject(load()); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(() => { assert.doesNotReject(load()); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(49): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(() => { assert.doesNotReject(load()); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(() => { assert.doesNotReject(load()); });
    | 	                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(() => { assert.doesNotReject(load()); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(5): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.race([load().then(value => { assert.strictEqual(value, 42); })]);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	Promise.race([load().then(value => { assert.strictEqual(value, 42); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(5): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.race([load().then(value => { assert.strictEqual(value, 42); })]);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise.race([load().then(value => { assert.strictEqual(value, 42); })]);
    | 	                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await Promise.race([load().then(value => { assert.strictEqual(value, 42); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(50): import test from 'node:test';\nimport * as nodeAssert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { nodeAssert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as nodeAssert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { nodeAssert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(50): import test from 'node:test';\nimport * as nodeAssert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { nodeAssert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as nodeAssert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { nodeAssert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import * as nodeAssert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { nodeAssert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(51): import test from 'node:test';\nimport assert from 'node:assert';\ntest.afterEach(async () => {\n\tteardown().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test.afterEach(async () => {
  4 | 	teardown().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(51): import test from 'node:test';\nimport assert from 'node:assert';\ntest.afterEach(async () => {\n\tteardown().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test.afterEach(async () => {
> 4 | 	teardown().then(value => { assert.strictEqual(value, 42); });
    | 	                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test.afterEach(async () => {
  4 | 	await teardown().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(52): import test from 'node:test';\nimport assert from 'node:assert';\ntest('parent', t => {\n\tt.beforeEach(() => {\n\t\tsetup().then(value => { assert.strictEqual(value, 42); });\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', t => {
  4 | 	t.beforeEach(() => {
  5 | 		setup().then(value => { assert.strictEqual(value, 42); });
  6 | 	});
  7 | });

`;

exports[`no-unawaited-promise-assertion > invalid(52): import test from 'node:test';\nimport assert from 'node:assert';\ntest('parent', t => {\n\tt.beforeEach(() => {\n\t\tsetup().then(value => { assert.strictEqual(value, 42); });\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', t => {
  4 | 	t.beforeEach(() => {
> 5 | 		setup().then(value => { assert.strictEqual(value, 42); });
    | 		                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  6 | 	});
  7 | });

`;

exports[`no-unawaited-promise-assertion > invalid(53): import test from 'node:test';\nimport assert from 'node:assert';\ntest.only('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test.only('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(53): import test from 'node:test';\nimport assert from 'node:assert';\ntest.only('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test.only('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test.only('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(54): import test from 'node:test';\nimport assert from 'node:assert';\ntest({name: 'loads', fn: async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test({name: 'loads', fn: async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | }});

`;

exports[`no-unawaited-promise-assertion > invalid(54): import test from 'node:test';\nimport assert from 'node:assert';\ntest({name: 'loads', fn: async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test({name: 'loads', fn: async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | }});

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test({name: 'loads', fn: async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | }});

`;

exports[`no-unawaited-promise-assertion > invalid(55): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async t => {\n\tload().then(value => { (t as any).assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async t => {
  4 | 	load().then(value => { (t as any).assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(55): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async t => {\n\tload().then(value => { (t as any).assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async t => {
> 4 | 	load().then(value => { (t as any).assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async t => {
  4 | 	await load().then(value => { (t as any).assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(56): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(load().then(value => { assert.strictEqual(value, 42); }))!;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	(load().then(value => { assert.strictEqual(value, 42); }))!;
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(56): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(load().then(value => { assert.strictEqual(value, 42); }))!;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	(load().then(value => { assert.strictEqual(value, 42); }))!;
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	(await load().then(value => { assert.strictEqual(value, 42); }))!;
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(57): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }) satisfies unknown;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); }) satisfies unknown;
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(57): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }) satisfies unknown;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); }) satisfies unknown;
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(58): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(load().then(value => { assert.strictEqual(value, 42); }));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	(load().then(value => { assert.strictEqual(value, 42); }));
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(58): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(load().then(value => { assert.strictEqual(value, 42); }));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	(load().then(value => { assert.strictEqual(value, 42); }));
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	(await load().then(value => { assert.strictEqual(value, 42); }));
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(59): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload() /* keep */.then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load() /* keep */.then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(59): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload() /* keep */.then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load() /* keep */.then(value => { assert.strictEqual(value, 42); });
    | 	                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load() /* keep */.then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(6): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.any([load().then(value => { assert.strictEqual(value, 42); })]);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	Promise.any([load().then(value => { assert.strictEqual(value, 42); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(6): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.any([load().then(value => { assert.strictEqual(value, 42); })]);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise.any([load().then(value => { assert.strictEqual(value, 42); })]);
    | 	                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await Promise.any([load().then(value => { assert.strictEqual(value, 42); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(60): import {test, getTestContext} from 'node:test';\ntest('parent', async ({assert}) => {\n\tawait getTestContext().test('child', async () => {\n\t\tload().then(value => { assert.ok(value); });\n\t});\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('parent', async ({assert}) => {
  3 | 	await getTestContext().test('child', async () => {
  4 | 		load().then(value => { assert.ok(value); });
  5 | 	});
  6 | });

`;

exports[`no-unawaited-promise-assertion > invalid(60): import {test, getTestContext} from 'node:test';\ntest('parent', async ({assert}) => {\n\tawait getTestContext().test('child', async () => {\n\t\tload().then(value => { assert.ok(value); });\n\t});\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('parent', async ({assert}) => {
  3 | 	await getTestContext().test('child', async () => {
> 4 | 		load().then(value => { assert.ok(value); });
    | 		                       ^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | 	});
  6 | });

Output:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('parent', async ({assert}) => {
  3 | 	await getTestContext().test('child', async () => {
  4 | 		await load().then(value => { assert.ok(value); });
  5 | 	});
  6 | });

`;

exports[`no-unawaited-promise-assertion > invalid(61): import test from 'node:test';\nimport assert from 'node:assert';\ntest('a', async (this: void, t) => { p().then(() => { t.assert.ok(1); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('a', async (this: void, t) => { p().then(() => { t.assert.ok(1); }); });

`;

exports[`no-unawaited-promise-assertion > invalid(61): import test from 'node:test';\nimport assert from 'node:assert';\ntest('a', async (this: void, t) => { p().then(() => { t.assert.ok(1); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
> 3 | test('a', async (this: void, t) => { p().then(() => { t.assert.ok(1); }); });
    |                                                       ^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('a', async (this: void, t) => { await p().then(() => { t.assert.ok(1); }); });

`;

exports[`no-unawaited-promise-assertion > invalid(62): import test from 'node:test';\nimport assert from 'node:assert';\nconst body = async t => {\n\tload().then(value => { t.assert.ok(value); });\n};\ntest('loads', body); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | const body = async t => {
  4 | 	load().then(value => { t.assert.ok(value); });
  5 | };
  6 | test('loads', body);

`;

exports[`no-unawaited-promise-assertion > invalid(62): import test from 'node:test';\nimport assert from 'node:assert';\nconst body = async t => {\n\tload().then(value => { t.assert.ok(value); });\n};\ntest('loads', body); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | const body = async t => {
> 4 | 	load().then(value => { t.assert.ok(value); });
    | 	                       ^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | };
  6 | test('loads', body);

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | const body = async t => {
  4 | 	await load().then(value => { t.assert.ok(value); });
  5 | };
  6 | test('loads', body);

`;

exports[`no-unawaited-promise-assertion > invalid(63): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([load().then(value => { assert.ok(value); })]) as any;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	Promise.all([load().then(value => { assert.ok(value); })]) as any;
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(63): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([load().then(value => { assert.ok(value); })]) as any;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise.all([load().then(value => { assert.ok(value); })]) as any;
    | 	                                    ^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(64): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([load().then(value => { assert.ok(value); })])!;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	Promise.all([load().then(value => { assert.ok(value); })])!;
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(64): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([load().then(value => { assert.ok(value); })])!;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise.all([load().then(value => { assert.ok(value); })])!;
    | 	                                    ^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await Promise.all([load().then(value => { assert.ok(value); })])!;
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(65): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise?.all([load().then(value => { assert.ok(value); })]);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	Promise?.all([load().then(value => { assert.ok(value); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(65): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise?.all([load().then(value => { assert.ok(value); })]);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise?.all([load().then(value => { assert.ok(value); })]);
    | 	                                     ^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await Promise?.all([load().then(value => { assert.ok(value); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(66): import test from 'node:test';\ntest('loads', async ({assert} = {}) => {\n\tload().then(value => { assert.ok(value); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('loads', async ({assert} = {}) => {
  3 | 	load().then(value => { assert.ok(value); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(66): import test from 'node:test';\ntest('loads', async ({assert} = {}) => {\n\tload().then(value => { assert.ok(value); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('loads', async ({assert} = {}) => {
> 3 | 	load().then(value => { assert.ok(value); });
    | 	                       ^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  4 | });

Output:
  1 | import test from 'node:test';
  2 | test('loads', async ({assert} = {}) => {
  3 | 	await load().then(value => { assert.ok(value); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(7): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([[load().then(value => { assert.strictEqual(value, 42); })]]);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	Promise.all([[load().then(value => { assert.strictEqual(value, 42); })]]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(7): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([[load().then(value => { assert.strictEqual(value, 42); })]]);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise.all([[load().then(value => { assert.strictEqual(value, 42); })]]);
    | 	                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await Promise.all([[load().then(value => { assert.strictEqual(value, 42); })]]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(8): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([load().then(value => { assert.strictEqual(value, 42); }), other.catch(error => { assert.ok(error); })]);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	Promise.all([load().then(value => { assert.strictEqual(value, 42); }), other.catch(error => { assert.ok(error); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(8): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([load().then(value => { assert.strictEqual(value, 42); }), other.catch(error => { assert.ok(error); })]);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise.all([load().then(value => { assert.strictEqual(value, 42); }), other.catch(error => { assert.ok(error); })]);
    | 	                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await Promise.all([load().then(value => { assert.strictEqual(value, 42); }), other.catch(error => { assert.ok(error); })]);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(8): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tPromise.all([load().then(value => { assert.strictEqual(value, 42); }), other.catch(error => { assert.ok(error); })]);\n}); 3`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	Promise.all([load().then(value => { assert.strictEqual(value, 42); }), other.catch(error => { assert.ok(error); })]);
    | 	                                                                                              ^^^^^^^^^^^^^^^^ Assertion in a floating \`catch()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(9): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(9): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;
